--- a/style/style.css
+++ b/style/style.css
@@ -1,74 +1,169 @@
-body {
-  font-family: "Arial", sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+nav {
+  padding: 10px;
+
   display: flex;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #f0f0f0;
+}
+h2 {
+  margin: auto;
+}
+.buttons {
+  display: flex;
+  gap: 10px;
+  padding-right: 20px;
+}
+#search {
+  width: 502px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(232, 232, 232);
+  font-size: 25px;
+  margin-left: 190px;
+  border-radius: 30px;
+}
+#search::placeholder {
+  color: gray;
+  text-align: center;
+  font-size: 20px;
+}
+#add {
+  border: none;
+  background-color: rgb(255, 255, 255);
+  margin-left: 26px;
+  text-decoration: none;
+  color: black;
+  width: 94px;
+  height: 48px;
+  border-radius: 32px;
+  cursor: pointer;
+}
+#logout {
+  border-radius: 32px;
+  width: 94px;
+  height: 48px;
+  background-color: black;
+  color: white;
+  border: none;
+  margin-left: 390px;
+  cursor: pointer;
 }
 
-.modal-register {
-  max-width: 400px;
+/* modal */
+
+.modal-editProduct {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  box-sizing: border-box;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
+  display: none;
   background-color: #fff;
-  padding: 30px;
+  padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.modal h1 {
-  font-size: 24px;
+.modal h3 {
   margin-bottom: 20px;
-  color: #333;
 }
 
-.modal p {
-  font-size: 14px;
-  color: #666;
+#editProduct-form {
+  display: flex;
+  flex-direction: column;
 }
 
-.modal a {
-  color: #3498db;
-  text-decoration: none;
-  font-weight: bold;
+#editProduct-form label {
+  margin-bottom: 10px;
 }
 
-.input {
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 15px;
-}
-
-input {
-  width: 100%;
-  padding: 12px;
+#editProduct-form input {
+  padding: 8px;
+  margin-top: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-bottom: 15px;
-  box-sizing: border-box;
 }
 
 .registerButtonWrapper {
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
   margin-top: 20px;
 }
 
-.register-button {
+.registerButtonWrapper button {
   background-color: #3498db;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.registerButtonWrapper button:hover {
+  background-color: #2980b9;
+}
+
+.productsList {
+  max-width: 300px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.productsList img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0; /* Rounded corners only at the top */
+  object-fit: cover;
+}
+
+.productsList div {
+  margin-top: 10px;
+}
+
+.productsList button {
+  background-color: #e74c3c; /* Red color for delete button */
+  color: #fff;
+  padding: 8px;
+  border: none;
+  border-radius: 0 0 8px 8px; /* Rounded corners only at the bottom */
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.productsList button:hover {
+  background-color: #c0392b; /* Darker red on hover */
+}
+.addinput {
+  display: flex;
+  justify-content: space-around;
+}
+#title {
+  width: 400px;
+  background-color: #d7d7d7;
   color: #fff;
   padding: 12px;
   border: none;
@@ -76,7 +171,23 @@ input {
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
 }
-
-.register-button:hover {
-  background-color: #2980b9;
+#category {
+  width: 400px;
+  background-color: #d7d7d7;
+  color: #fff;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+#image {
+  width: 400px;
+  background-color: #d7d7d7;
+  color: #fff;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
